@@ -7,6 +7,7 @@ Changes for 1.3.5.4
 -Fixed the reading of some SMBX-38A level files
 -Updated the MixerX library
 -Use Down as the ground-pound key during ForcedControls events (Bug #331)
+-Fixed locks and stars at two-way warps (Bug #300)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
